[package]
name = "hanekawa"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
nom = "7"
arbitrary = { version = "1", features = ["derive"], optional = true }

[features]
fuzz = ["dep:arbitrary"]
