[package]
name = "hanekawa"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
axum = "0"
axum-extra = { version = "0", features = ["query"] }
bytes = "1"
futures = "0.3"
itoa = "1"
nom = "7"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0", features = ["net", "codec"] }

[features]
fuzz = ["dep:arbitrary"]
