[package]
name = "hanekawa-bencode"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
bytes = "1"
lexical = { version = "6", default_features = false, features = ["parse-integers", "write-integers"] }
memchr = "2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0"

[dev-dependencies]
include_dir = "0"
criterion = "0"

[features]
fuzz = ["dep:arbitrary"]

[[bench]]
name = "bencode"
harness = false
