[package]
name = "hanekawa-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
hex = "0"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0"
