[package]
name = "hanekawa-queue"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
hanekawa-common = { path = "../hanekawa-common" }
async-trait = "0"
futures = "0.3"
lapin = "2"
serde_json = "1"
tokio = "1"
tokio-util = "0"
