[package]
name = "hanekawa-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
hanekawa = { path = "../hanekawa" }
hanekawa-bencode = { path = "../hanekawa-bencode" }
hanekawa-common = { path = "../hanekawa-common" }
hanekawa-percent-encode = { path = "../hanekawa-percent-encode" }
hanekawa-udp = { path = "../hanekawa-udp" }
hanekawa-storage = { path = "../hanekawa-storage" }
axum = "0"
async-trait = "0"
bytes = "1"
config = { version = "0", default-features = false, features = ["toml"] }
dotenvy = "0"
futures = "0.3"
serde = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0", features = ["net", "codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"
