[package]
name = "hanekawa-udp"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
hanekawa = { path = "../hanekawa" }
hanekawa-common = { path = "../hanekawa-common" }
bytes = "1"
nom = "7"
