[package]
name = "hanekawa"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
hanekawa-common = { path = "../hanekawa-common" }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0"
time = "0"
